# sidra-monitoring

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: servers.yml
docker/central-brain/: Dockerfile.ingest  Dockerfile.report  docker-compose.yml
docker/central-brain/alertmanager/: alertmanager.yml
docker/central-brain/grafana/provisioning/dashboards/: dashboards.yml  infrastructure.json
docker/central-brain/grafana/provisioning/datasources/: datasources.yml
docker/edge-agent/: Dockerfile  docker-compose.yml
scripts/: deploy_edge_agent.sh  full_discovery.sh  monitor_daemon.sh
src/: __init__.py  cli.py  config.py
src/agents/: __init__.py  documentation_agent.py  infrastructure_agent.py  monitoring_agent.py
src/api/: __init__.py  main.py
src/central/: __init__.py  autonomous_ops.py  ingest_api.py  llm_analyzer.py  report_api.py  self_healing.py
src/central/src/central/: notifications.py
src/central/src/central/configs/: autonomous_config.yaml
src/central/src/central/src/central/: decision_history.py  metrics_enricher.py
src/discovery/: __init__.py  database.py  docker.py  network.py  server.py  services.py  storage.py
src/edge/: __init__.py  agent.py  batching.py  buffer.py  config.py  sender.py  standalone_agent.py
src/edge/collectors/: __init__.py  docker.py  gpu.py  logs.py  services.py  system.py
src/utils/: __init__.py  logger.py  ssh.py
